tests/paczka1/fuzzy1/75219599.err
Error in line 19: vDyvq4U A22 10,3
Error in line 21: SFrjw5ody A22 50,1
Error in line 4: zplQ A430 75,9
Error in line 38: zplQ S779 13,3
